apps/extra-ingresses/filestash-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: filestash-ingress
  namespace: filestash
spec:
  defaultBackend:
    service:
      name: filestash
      port:
        name: http
  ingressClassName: tailscale
  tls:
    - hosts:
        - filestash
