apps/extra-ingresses/hubble-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubble-ingress
  namespace: kube-system
spec:
  defaultBackend:
    service:
      name: hubble-ui
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - hubble
