apps/extra-ingresses/jupyterhub-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyterhub-ingress
  namespace: jupyterhub
spec:
  defaultBackend:
    service:
      name: proxy-public
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - jupyterhub
