apps/extra-ingresses/minio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: minio
spec:
  defaultBackend:
    service:
      name: minio-console
      port:
        number: 9001
  ingressClassName: tailscale
  tls:
    - hosts:
        - minio
