apps/extra-ingresses/mlflow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlflow-ingress
  namespace: minio
spec:
  defaultBackend:
    service:
      name: mlflow
      port:
        number: 5000
  ingressClassName: tailscale
  tls:
    - hosts:
        - mlflow
